@@ -1,13 +1,17 @@
 package com.udea.Flights.service.implement;
 
 import com.udea.Flights.domain.dto.FareDTO;
+import com.udea.Flights.domain.dto.FlightDTO;
 import com.udea.Flights.domain.model.Fare;
+import com.udea.Flights.domain.model.Flight;
 import com.udea.Flights.exception.ServiceException;
 import com.udea.Flights.mapper.IFareMapper;
 import com.udea.Flights.repository.IFareRepository;
 import com.udea.Flights.service.IFareService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -23,16 +27,16 @@ public class FareService implements IFareService {
         this.fareMapper = fareMapper;
     }
 
+
     @Override
-    public List<FareDTO> getFaresByFlightClassName(String nameTypeClass) {
+    public List<FareDTO> searchFlightsByDatesAndCities(LocalDate departureDate, LocalDate arrivalDate, String originCity, String destinationCity) {
         try {
-            List<Fare> fares = fareRepository.findByFlightClassName(nameTypeClass);
+            List<Fare> fares = fareRepository.findByDatesAndCities(departureDate, arrivalDate, originCity, destinationCity);
             return fares.stream()
                     .map(fareMapper::fareToFareDTO)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             throw new ServiceException("Error al buscar vuelos por fechas de salida y llegada", e);
         }
     }
-
 }
