@@ -8,10 +8,8 @@ import com.udea.Flights.repository.IFlightRepository;
 import com.udea.Flights.service.IFlightService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FlightService implements IFlightService {
@@ -26,30 +24,17 @@ public class FlightService implements IFlightService {
     }
 
     @Override
-    public List<FlightDTO> searchByDepartureDateAndArrivalDate(LocalDateTime departureDate, LocalDateTime arrivalDate) {
+    public List<FlightDTO> searchFlightsByDatesAndCities(LocalDate departureDate, LocalDate arrivalDate, String originCity, String destinationCity) {
         try {
-            List<Flight> flights = flightRepository.findByDepartureDateAndArrivalDate(departureDate, arrivalDate);
+            List<Flight> flights = flightRepository.findFlightsByDatesAndCities(departureDate, arrivalDate, originCity, destinationCity);
             return flights.stream()
                     .map(flightMapper::flightToFlightDTO)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             throw new ServiceException("Error al buscar vuelos por fechas de salida y llegada", e);
         }
     }
 
-
-
-    @Override
-    public List<FlightDTO> searchByFlightNumber(String flightNumber) {
-        try {
-            List<Flight> flights = flightRepository.findByFlightNumber(flightNumber);
-            return flights.stream()
-                    .map(flightMapper::flightToFlightDTO)
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new ServiceException("Error al buscar vuelos por número de vuelo", e);
-        }
-    }
 }
 
 
